login sign done

--- a/src/Login.css
+++ b/src/Login.css
@@ -1,8 +1,5 @@
 .desktop {
-  background-image: url('./assets/kawai.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: #EFEDE4;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -68,7 +65,7 @@
 }
 
 .desktop .text-wrapper {
-  color: #ea4845;
+  color: #4F622E;
   font-family: "Alegreya Sans-Black", Helvetica;
   font-size: 30px;
   font-weight: 900;
@@ -83,8 +80,8 @@
 }
 
 .desktop .div {
-  background-color: #e6423f;
-  color: #ffece8;
+  background-color: #C3D09A;
+  color: #4F622E;
   font-family: "Alegreya-Medium", Helvetica;
   font-size: 20px;
   font-weight: 500;
@@ -103,9 +100,12 @@
   text-align: center;
   left: 63px;
 }
+.div:hover{
+  background-color: #a6c079;
+}
 
 .desktop .don-t-have-an {
-  color: #ea4845;
+  color: #4F622E;
   font-family: "Alegreya-Medium", Helvetica;
   font-size: 16px;
   font-weight: 500;
@@ -118,7 +118,7 @@
 }
 
 .desktop .text-wrapper-2 {
-  color: #ffece8;
+  color: #EFEDE4;
   font-family: "Alegreya-Medium", Helvetica;
   font-size: 20px;
   font-weight: 500;
@@ -130,7 +130,7 @@
 }
 
 /* .desktop .rectangle-2 {
-  background-color: #ffece8;
+  background-color: #EFEDE4;
   border-radius: 3px;
   height: 40px;
   display: flex;
@@ -141,7 +141,7 @@
 }
 
 .desktop .rectangle-3 {
-  background-color: #ffece8;
+  background-color: #EFEDE4;
   border-radius: 3px;
   height: 40px;
   display: flex;
@@ -152,7 +152,7 @@
 } */
 
 .desktop .text-wrapper-3 {
-  color: #ea4845;
+  color: #4F622E;
   font-family: "Alegreya-Medium", Helvetica;
   font-size: 14px;
   font-weight: 500;
@@ -165,7 +165,7 @@
 }
 
 .desktop .text-wrapper-4 {
-  color: #ea4845;
+  color: #4F622E;
   font-family: "Alegreya-Medium", Helvetica;
   font-size: 15px;
   font-weight: 500;
@@ -184,7 +184,7 @@
 }
 
 /* .desktop .text-wrapper-5 {
-  color: #ea4845;
+  color: #4F622E;
   font-family: "Alegreya-Medium", Helvetica;
   font-size: 20px;
   font-weight: 500;
@@ -196,7 +196,7 @@
 } */
 
 /* .desktop .text-wrapper-6 {
-  color: #ea4845;
+  color: #4F622E;
   font-family: "Alegreya-Medium", Helvetica;
   font-size: 20px;
   font-weight: 500;
@@ -206,49 +206,57 @@
   position: absolute;
 } */
 
-.checkbox{
+.checkbox {
   position: absolute;
   top: 300px;
   left: 80px;
-  color:#e6423f;
+  color: #4F622E;
   font-size: 14px;
   font-family: "Alegreya-Medium", Helvetica;
 }
-.tickbox{
+
+.tickbox {
   position: absolute;
   left: -17px;
   top: 1.5px;
 }
-.email1{
-  background-color: #ffece8;
+.loginform{
+  display: flex;
+  align-items: center;
+}
+.email1 {
+  background-color: #EFEDE4;
   border: none;
   font-size: 20px;
   padding-left: 10px;
-  color: #e6423f;
-  font-family:"Alegreya-Medium", Helvetica;
+  color: #4F622E;
+  font-family: "Alegreya-Medium", Helvetica;
   width: 346px;
   height: 45px;
   position: absolute;
   top: 170px;
   border-radius: 5px;
-  
 }
-.password1{
-  background-color: #ffece8;
+
+.password1 {
+  background-color: #EFEDE4;
   border: none;
   font-size: 20px;
   padding-left: 10px;
-  color: #e6423f;
-  font-family:"Alegreya-Medium", Helvetica;
+  color: #4F622E;
+  font-family: "Alegreya-Medium", Helvetica;
   width: 346px;
   height: 45px;
   position: absolute;
   top: 245px;
   border-radius: 5px;
 }
-input::placeholder{
-  color: #e6423f;
+
+input::placeholder {
+  color: #4F622E;
+  opacity: 0.7;
 }
-.register-link{
-  color: #e6423f;
+
+.register-link {
+  color: #4F622E;
 }
