--- a/src/landingpage.css
+++ b/src/landingpage.css
@@ -1,114 +1,166 @@
-.meal-container {
-  display: flex;
-  height: 100vh;
-  overflow: hidden;
-  background: url('/path-to-blurred-bg.jpg') no-repeat center center;
-  background-size: cover;
-}
-
-.main-panel {
-  flex: 1;
+.page{
   display: flex;
   flex-direction: row;
-  position: relative;
-  padding: 20px;
-  justify-content: space-between;
+  height: 100vh;
+  width: 100vw;
+  background-color: #EFEDE4;
 }
-
-/* Left half inside main-panel */
-.meal-content {
-  width: 60%;
+.leftpart{
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  width: 80px;
+  height: 100%;
 }
-
-/* Right content like cards and calendar */
-.right-content {
-  width: 35%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-left: 20px;
-}
-
-/* Positioning meal diagram elements in a flow */
-.meal-diagram {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-  padding: 20px;
-}
-
-.circle {
-  width: 120px;
-  height: 120px;
-  background-color: #fdd;
-  border-radius: 50%;
+ .sidebar {
+  background-color: #C3D09A;
+  width: 100%;
+  height: 100%;
+  /* position: fixed;
+  top: 0px;
+  left: 0px; */
   display: flex;
   justify-content: center;
-  align-items: center;
-  font-weight: bold;
 }
-
-.cancel {
-  position: absolute;
-  top: -20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #f44;
-  color: white;
-  font-weight: bold;
-  padding: 10px 16px;
-  border-radius: 50%;
-  z-index: 1;
-}
-
-.advance {
-  align-self: center;
-  background-color: #f44;
-  color: white;
-  border: none;
-  padding: 12px 25px;
-  border-radius: 10px;
-  font-weight: bold;
-  margin-top: 20px;
-}
-
-.cards {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.card {
-  background-color: #e86b6b;
+.IMG{
   width: 100px;
-  height: 100px;
-  border-radius: 10px;
-  text-align: center;
-  font-weight: bold;
-  color: white;
+}
+
+/* .logo {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+} */
+
+.icons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  color: #4F622E;
+  
+}
+
+.icon-button {
+  padding: 10px;
+  border-radius: 12px;
+  transition: background-color 0.2s ease;
+  cursor: pointer;
+}
+
+.icon-button:hover {
+  background-color: #2f2f45;
+}
+
+.rightpart{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  position: relative;
+}
+.toppart{
+  display: flex;
+  height: 60px;
+  width: 100vw;
+  position: fixed;
+  left: 80px;
+  top: 0px;
+}
+
+.navbar {
+  border-bottom: 1px solid #4F622E;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+  padding-right: 100px;
+}
+
+.navbar-left{
+  font-size: 30px;
+  width: 400px;
+  font-weight: 700;
+  color: #4F622E;
+  margin-left: 20px;
+  margin-top: 18px;
+}
+
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+  margin-top: 18px;
+}
+
+.nav-icon {
+  cursor: pointer;
+  color: #4F622E;
+} 
+
+.bottompart{
+  display: flex;
+  flex: 1;
+  margin-top: 60px;
+  /* position: absolute;
+  top: 60px;
+  left: 80px; */
+}
+
+.part1{
+  display: flex;
+  flex: 1;
+  /* width: 50%; */
+
+}
+.part2{
+  display: flex;
+  flex: 1;
+  /* width: 50%; */
+  border-left-color: #000000;
+  border-left: solid;
+  border-left-width: 1px;
+  flex-direction: column;
+}
+
+.part2up{
+  display: flex;
+  padding: 20px; 
+  justify-content: space-around;
+  margin-bottom: 30px;
+}
+
+.box1,.box2,.box3{
+  min-width: 170px;
+  height: 200px;
+  background-color: #C3D09A;
+  border-radius: 20px;
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 20px;
+}
+.Img1{
+  width: 70px;
+  height: 70px;
+}
+.boximg{
+  background-color: #EFEDE4;
+  width: 90px;
+  height: 90px;
+  margin-bottom: 25px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.part2down{
+display: flex;
+} 
 
-.calendar {
-  text-align: center;
-}
-
-.week {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-
-.highlight-box {
-  background-color: #ffecec;
-  padding: 20px;
-  margin-top: 20px;
-  border-radius: 16px;
-  text-align: center;
+.menu{
+  margin-left: 50px;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 18px;
 }
