--- a/src/SignupStudent.css
+++ b/src/SignupStudent.css
@@ -6,15 +6,13 @@
 }
 
 body, html {
-  background-image: url('./assets/kawai.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   height: 100%;
   width: 100%;
-  background-color: #ffece8;
+  background-color: #EFEDE4;
   display: flex;
   align-items: center;
+  box-sizing: border-box;
+  /* overflow: hidden; */
 }
 
 .container {
@@ -31,7 +29,7 @@ body, html {
 
 .image-section {
   width: 50%;
-  background-color: #e6423f;
+  background-color: #4F622E;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,7 +49,7 @@ body, html {
 }
 
 .form-section h1 {
-  color: #ea4845;
+  color: #4F622E;
   font-weight: 900;
   font-size: 24px;
   margin-bottom: 8px;
@@ -61,7 +59,7 @@ body, html {
 .form-section .subtitle {
   text-align: center;
   font-size: 14px;
-  color: #ea4845;
+  color: #4F622E;
   margin-bottom: 20px;
   font-family: 'Alegreya Sans', sans-serif;
 }
@@ -73,10 +71,10 @@ body, html {
 }
 
 .tabs button {
-  background-color: #ffece8;
+  background-color: #EFEDE4;
   border: none;
   padding: 10px 20px;
-  color: #ea4845;
+  color: #4F622E;
   font-weight: 600;
   cursor: pointer;
   border-radius: 4px;
@@ -85,7 +83,7 @@ body, html {
 }
 
 .tabs .active {
-  background-color: #ea4845;
+  background-color: #4F622E;
   color: white;
 } */
 
@@ -100,14 +98,14 @@ form {
   gap: 10px;
 }
 
-input[type="text"] {
+.name {
   flex: 1;
   width: 100%;
   padding: 10px;
-  border: 1px solid #ffece8;
+  border: 1px solid #EFEDE4;
   border-radius: 4px;
-  background-color: #ffece8;
-  color: #ea4845;
+  background-color: #EFEDE4;
+  color: #4F622E;
   font-size: 14px;
   box-sizing: border-box; /* ensures padding doesn't break width */
 }
@@ -115,10 +113,10 @@ input[type="text"] {
   flex: 1;
   width: 100%;
   padding: 10px;
-  border: 1px solid #ffece8;
+  border: 1px solid #EFEDE4;
   border-radius: 4px;
-  background-color: #ffece8;
-  color: #ea4845;
+  background-color: #EFEDE4;
+  color: #4F622E;
   font-size: 14px;
   box-sizing: border-box;
 }
@@ -126,16 +124,16 @@ input[type="text"] {
   flex: 1;
   width: 100%;
   padding: 10px;
-  border: 1px solid #ffece8;
+  border: 1px solid #EFEDE4;
   border-radius: 4px;
-  background-color: #ffece8;
-  color: #ea4845;
+  background-color: #EFEDE4;
+  color: #4F622E;
   font-size: 14px;
   box-sizing: border-box;
 }
 
 input::placeholder {
-  color: #ea4845;
+  color: #4F622E;
   opacity: 0.7;
 }
 
@@ -146,29 +144,30 @@ input {
 
 /* Submit button */
 .submit-btn {
-  background-color: #ea4845;
-  color: white;
+  background-color: #C3D09A;
+  color: #4F622E;
   padding: 10px;
   border: none;
   border-radius: 3px;
   font-size: 16px;
   cursor: pointer;
+  width: 100%;
   transition: background 0.3s ease;
 }
 
 .submit-btn:hover {
-  background-color: #c23632;
+  background-color: #a6c079;
 }
 
 .login-link {
   text-align: center;
   font-size: 14px;
   margin-top: 10px;
-  color: #ea4845;
+  color: #4F622E;
 }
 
 .login-link a {
-  color: #e6423f;
+  color: #4F622E;
   text-decoration: underline;
 }
 
@@ -217,14 +216,14 @@ input {
   flex: 1;
 }
 .Student {
-  color: #ffece8;
-  background-color:#e6423f;
+  color: #4F622E;
+  background-color:#C3D09A;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
 .Staff{
-  color: #e6423f;
-  background-color: #ffece8;
+  color: #4F622E;
+  background-color: #EFEDE4;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
 }
@@ -239,10 +238,10 @@ input {
   border-bottom-right-radius: 8px;
 } */
 
-.toggle-btn.active {
-  background-color: #ea4845;
+/* .toggle-btn.active {
+  background-color: #4F622E;
   color: white;
-}
+} */
 
 .separator-line {
   width: 1px;
